--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: jacob fowler
 logo:  /assets/img/headshot_circle.png
 description: Just getting started! More to come. 
-theme: jekyll-theme-architect
+theme: jekyll-theme-tactile
